
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(MPEG2TS_UTILS C CXX)

SET(CMAKE_C_COMPILER gcc  )
SET(CMAKE_CXX_COMPILER gcc )
SET(CMAKE_CXX_FLAGS "-O3 -Wall" )
SET( CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall")
ADD_DEFINITIONS(-D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 )

INCLUDE_DIRECTORIES(${MPEG2TS_UTILS_SOURCE_DIR})

SET(EXECUTABLE_OUTPUT_PATH ${MPEG2TS_UTILS_SOURCE_DIR}/bin)

ADD_EXECUTABLE(pid_filter 
                ${MPEG2TS_UTILS_SOURCE_DIR}/utils/pid_filter.cpp)
TARGET_LINK_LIBRARIES(pid_filter stdc++)

ADD_EXECUTABLE(pid_nullify 
                ${MPEG2TS_UTILS_SOURCE_DIR}/utils/pid_nullify.cpp)
TARGET_LINK_LIBRARIES(pid_nullify stdc++)

ADD_EXECUTABLE(ts_re_time_stamp 
                ${MPEG2TS_UTILS_SOURCE_DIR}/utils/ts_re_time_stamp.cpp)
TARGET_LINK_LIBRARIES(ts_re_time_stamp stdc++)


